kubernetes/apps/external-secrets/external-secrets/templates/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://deedee-ops.github.io/schemas/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: bitwarden-secretsmanager
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: bitwarden-sdk-server
    egress:
      - toPorts:
          - ports:
              - port: "53"
                protocol: ANY
            rules:
              dns:
                - matchPattern: "*"
      - toFQDNs:
          - matchName: "api.bitwarden.eu"
          - matchName: "identity.bitwarden.eu"
